--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 activityComposeVersion = "1.7.2"
 agp = "8.7.3"
 androidxNavigationCompose = "2.8.1"
+animatedNavigationBar = "1.0.0"
 coilCompose = "2.4.0"
 converterGson = "2.9.0"
 core = "3.4.1"
@@ -42,6 +43,7 @@ androidx-navigation-compose-v281 = { module = "androidx.navigation:navigation-co
 androidx-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "runtime" }
 androidx-ui-tooling-v153 = { module = "androidx.compose.ui:ui-tooling", version.ref = "uiToolingVersion" }
 androidx-ui-v153 = { module = "androidx.compose.ui:ui", version.ref = "uiVersion" }
+animated-navigation-bar = { module = "com.exyte:animated-navigation-bar", version.ref = "animatedNavigationBar" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 core = { module = "com.google.zxing:core", version.ref = "core" }
